@@ -156,6 +156,7 @@ extern long atol(const char *str);
 
 /****************************************************************************/
 
+extern void _exit(int status);
 extern int rand_r(unsigned int * seed);
 
 /****************************************************************************/
