@@ -109,7 +109,6 @@ MATH_LIB := \
 	math_kernel_cosf.o \
 	math_kernel_expm1.o \
 	math_kernel_rem_pio2.o \
-	math_kernel_scalbn.o \
 	math_kernel_sin.o \
 	math_kernel_sinf.o \
 	math_kernel_tan.o \
