@@ -1,88 +1,0 @@
-/*
- * $Id$
- *
- * :ts=4
- *
- * Portable ISO 'C' (1994) runtime library for the Amiga computer
- * Copyright (c) 2002-2006 by Olaf Barthel <olsen (at) sourcery.han.de>
- * All rights reserved.
- *
- * Redistribution and use in source and binary forms, with or without
- * modification, are permitted provided that the following conditions
- * are met:
- *
- *   - Redistributions of source code must retain the above copyright
- *     notice, this list of conditions and the following disclaimer.
- *
- *   - Neither the name of Olaf Barthel nor the names of contributors
- *     may be used to endorse or promote products derived from this
- *     software without specific prior written permission.
- *
- * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
- * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
- * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
- * ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE
- * LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
- * CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
- * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
- * INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
- * CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
- * ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
- * POSSIBILITY OF SUCH DAMAGE.
- *
- *
- * PowerPC math library based in part on work by Sun Microsystems
- * Copyright (C) 1993 by Sun Microsystems, Inc. All rights reserved.
- *
- * Developed at SunPro, a Sun Microsystems, Inc. business.
- * Permission to use, copy, modify, and distribute this
- * software is freely granted, provided that this notice
- * is preserved.
- */
-
-#ifndef _MATH_HEADERS_H
-#include "math_headers.h"
-#endif /* _MATH_HEADERS_H */
-
-/****************************************************************************/
-
-#if defined(FLOATING_POINT_SUPPORT) && defined(PPC_FLOATING_POINT_SUPPORT)
-
-/****************************************************************************/
-
-static const double
-huge	= 1.0e+300,
-tiny	= 1.0e-300,
-two54   = 1.80143985094819840000e+16, /* 0x43500000, 0x00000000 */
-twom54  = 5.55111512312578270212e-17; /* 0x3C900000, 0x00000000 */
-
-double __scalbn (double x, int n)
-{
-	int  k,hx,lx;
-	EXTRACT_WORDS(hx,lx,x);
-	k = (hx&0x7ff00000)>>20;		/* extract exponent */
-	if (k==0) {				/* 0 or subnormal x */
-		if ((lx|(hx&0x7fffffff))==0) return x; /* +-0 */
-	    x *= two54; 
-	    GET_HIGH_WORD(hx,x);
-	    k = ((hx&0x7ff00000)>>20) - 54; 
-		if (n< -50000) return tiny*x; 	/*underflow*/
-	}
-	if (k==0x7ff) return x+x;		/* NaN or Inf */
-	k = k+n; 
-	if (k >  0x7fe) return huge*copysign(huge,x); /* overflow  */
-	if (k > 0) 				/* normal result */
-	{SET_HIGH_WORD(x,(hx&0x800fffff)|(k<<20)); return x;}
-	if (k <= -54) {
-		if (n > 50000) 	/* in case integer overflow in n+k */
-		return huge*copysign(huge,x);	/*overflow*/
-	    else return tiny*copysign(tiny,x); 	/*underflow*/
-	}
-	k += 54;				/* subnormal result */
-	SET_HIGH_WORD(x,(hx&0x800fffff)|(k<<20));
-	return x*twom54;
-}
-
-/****************************************************************************/
-
-#endif /* FLOATING_POINT_SUPPORT && PPC_FLOATING_POINT_SUPPORT */
