@@ -55,7 +55,7 @@ char *	optarg;
 /****************************************************************************/
 
 int
-getopt(int argc, char * argv[], char *opts)
+getopt(int argc, char * const argv[], const char *opts)
 {
 	static int sp = 1;
 	int result = EOF;
